WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
4128
!important is ignored in inline styling.
https://bugs.webkit.org/show_bug.cgi?id=4128
Summary
!important is ignored in inline styling.
Tim Brown
Reported
2005-07-25 11:59:00 PDT
Safari not recognizing inline background-images with !important attribute. In the link provided, every web-standards browser I've tested shows a busy blue background-image behind the H4. NN4 shows no background image, which I was aiming for. Safari 10.4 also shows no background-image, but I want it to. Thank you very much, Tim Brown
Attachments
Testcase
(75 bytes, text/html)
2005-12-28 01:54 PST
,
Joost de Valk (AlthA)
no flags
Details
First attempt
(37.98 KB, patch)
2007-02-20 01:22 PST
,
Rob Buis
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Petersen
Comment 1
2005-07-29 06:29:31 PDT
Confirming with TOT WebKit and Safari 2.0 (412.2).
Mark Rowe (bdash)
Comment 2
2005-07-29 22:45:38 PDT
Marking as confirmed as per Chris Petersen's comment.
Eric Seidel (no email)
Comment 3
2005-12-27 14:42:51 PST
I don't know quite enough about the CSS code to fix this w/o some investigation, but it should be a pretty trivial fix for someone who does. Somehow backgrounds are not respecting the !important flag. It woudl be nice to have an even nicer test case (one we could actually land as part of the layout tests)
Joost de Valk (AlthA)
Comment 4
2005-12-28 01:53:16 PST
Will add a testcase that shows. Changing summary and keyword.
Joost de Valk (AlthA)
Comment 5
2005-12-28 01:54:52 PST
Created
attachment 5327
[details]
Testcase This shows that inline !important is being ignored.
Matt Lilek
Comment 6
2006-11-24 11:51:47 PST
***
Bug 11688
has been marked as a duplicate of this bug. ***
Rob Buis
Comment 7
2007-02-20 01:22:34 PST
Created
attachment 13271
[details]
First attempt This patch should do it. I'll make another patch that may be more efficient. Cheers, Rob.
Dave Hyatt
Comment 8
2007-02-20 12:51:54 PST
Comment on
attachment 13271
[details]
First attempt Since the # of properties is typically going to be small in a given declaration, I doubt the performance of this will be a big deal. One idea, though, if it does turn out to be a problem, might be to cache whether the decl has any !important rules used in it at all. Only if it contains some do you do the slower check.
Dave Hyatt
Comment 9
2007-02-27 03:37:55 PST
Comment on
attachment 13271
[details]
First attempt r=me
Rob Buis
Comment 10
2007-02-27 12:44:14 PST
Landed in
r19892
.
Dave Hyatt
Comment 11
2007-02-27 15:14:17 PST
Rob, could you file a followup bug to improve the performance of this? Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug