        Reviewed by David Hyatt.

http://bugs.webkit.org/show_bug.cgi?id=4128
        !important is ignored in inline styling.

        Handle properties with !important flag better in inline
        style declarations.



Canonical link: https://commits.webkit.org/16729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19892 268f45cc-cd09-0410-ab3c-d52691b4dbfc